--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^5.2.1",
     "mongoose": "^8.18.2",
     "nodemailer": "^7.0.10",
+    "resend": "^6.5.2",
     "stripe": "^20.0.0"
   },
   "devDependencies": {
